--- a/cms/templates/base.html
+++ b/cms/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <header style="margin: 20px">
+    <header style="margin-top: 20px">
         <a href="{% url 'cms:track_list' %}" class="btn btn-default btn-sm">みんなのページ</a>
         <a style="margin: 10px" href="{% url 'cms:track_list_user' %}" class="btn btn-default btn-sm">自分のページ</a>
         <a href="{% url 'cms:track_ranking' %}" class="btn btn-default btn-sm">ランキング</a>
